@@ -8,3 +8,6 @@ fedex:
   login: '510087666'
   password: '1250153'
   test: true
+shipwire:
+  login:
+  password:
